@@ -1,3 +1,7 @@
+2008/05/20
+	35. Added diffusion node picker factory.
+	
+	
 2008/05/13	kwsPlus release 1.4
 	
 	34. Added distance function factory.
